// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> passes styles down to children columns should match snapshot with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-right: 1em;
  padding-bottom: 1em;
}

.c0 .brckwrx-col {
  padding-top: 1em;
  padding-left: 1em;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

<styled.div
  breakpoints={
    Object {
      "lg": "992px",
      "md": "768px",
      "sm": "576px",
      "xl": "1200px",
    }
  }
  padded={true}
>
  <div
    className="brckwrx-grid c0"
  >
    <Col>
      <div
        className="brckwrx-col c1"
      >
        Hello
      </div>
    </Col>
  </div>
</styled.div>
`;

exports[`<Grid /> with added props should match snapshot with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: space-around;
  -ms-flex-line-pack: space-around;
  align-content: space-around;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-right: 1em;
  padding-bottom: 1em;
}

.c0 .brckwrx-col {
  padding-top: 1em;
  padding-left: 1em;
}

<div
  className="brckwrx-grid c0"
/>
`;

exports[`<Grid /> with default props/settings should match snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<div
  className="brckwrx-grid c0"
/>
`;
